Made changes and updated the content so that its narrower, also fixed the unneccessary white space in the 'for teacher' section on index

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -70,6 +70,10 @@ h3.head2 {
     border-bottom: none;
 }
 
+.circleParagraph {
+    font-size: 1.2em;
+}
+
 .fatFont {
      font-weight:600 !important;
 }
@@ -89,6 +93,10 @@ h3.head2 {
 
 .welcome hr, #explore {
     border-top: 2px solid #b4b4b4;
+}
+
+.teacherPara {
+    font-size: 1.2em;
 }
 
 b {
@@ -113,6 +121,10 @@ em, em.black {
     color: black !important;
 }
 
+a.btn {
+    margin-top: 10%;
+}
+
 /*--------------Images-----------------*/
 .rnd-img {
     width: 10em;
@@ -127,14 +139,14 @@ em, em.black {
 .col-lg-6 img {
     margin-top: 2em;
     border-radius: 3px;
-    border: 2em solid grey;
+    border: 0.5em solid grey;
 }
 
 .img-fluid {
     margin-bottom: 2em;
     margin-top: 2em;
     border-radius: 3px;
-    border: .8em solid grey;
+    border: .4em solid grey;
 }
 #libary {
     background-image: url("../images/mobile/background/purple-lib.png");
@@ -155,13 +167,6 @@ em, em.black {
     margin: 2em auto;
 }
 
-#exploreImg {
-    background-image: url(../images/Logo/scientist.png);
-    background-repeat:no-repeat;
-    background-size: 7em;
-    background-position: bottom left;
-}
-
 #VR {
     background-image: url("../images/mobile/background/vrbackground.png");
     background-repeat: no-repeat;
@@ -169,13 +174,6 @@ em, em.black {
     background-size: cover;
     background-attachment: fixed;
     margin:0 -15px;
-}
-
-#intern {
-    background-image: url(../images/ball-1010907_1920.jpg);
-    background-repeat:no-repeat;
-    background-size: 7em;
-    background-position: bottom right;
 }
 
 #ant {
@@ -275,13 +273,6 @@ hr.ft-light {
         background-size: cover;
         
 }
-    
-    .scientist {
-        background-image: url(../images/Logo/scientist.png);
-        background-repeat:no-repeat;
-        background-size: 10em;
-        background-position: bottom right;
-    }
     
 /*-----------horisontal rule--------*/ 
     
@@ -499,13 +490,6 @@ hr.ft-light {
 /* super size screens, 1920 format */
 @media only screen and (min-width: 992px) {
     
-    .teacher {
-        background-image: url(../images/teacher-2816112.jpg);
-        background-repeat:no-repeat;
-        background-size: 8em;
-        background-position: bottom right;
-    }
-    
     #VR {
         background-image: url("../images/mobile/background/vrbackgroundDesktop.png");
         background-repeat: no-repeat;
@@ -515,19 +499,8 @@ hr.ft-light {
         background-attachment: fixed;
         margin:0 -15px;
     }
-
-    #chemistry {
-        background-image: url(../images/science-2799817.jpg);
-        background-repeat:no-repeat;
-        background-size: 8em;
-        background-position: bottom left;
-        
-    }
 }
 @media only screen and (min-width: 1370px) {
-      p {
-        font-size: 1.8em;
-    }
     h1.fatFont {
         font-size: 5em;
     }
@@ -536,23 +509,11 @@ hr.ft-light {
         font-size: 3em;
     }
     
-    .carousel-caption h1 {
-        font-size: 5em;
-    }
-    
-    .carousel-caption h2 {
-        font-size: 3em;
-    }
-    .jumbotron blockquote {
-        font-size: 2.5em;
-    }
-    
     .col-md-4 h5 {
         font-size: 2.5em;
     }
     
     .carousel-caption button {
-        font-size: 2.4em;
         margin-top: 1em;
     
     }
@@ -561,47 +522,13 @@ hr.ft-light {
     font-size: 1.7em;
 }
 }
-@media only screen and (min-width: 1441px) {
-    p {
-        font-size: 1.8em;
-    }
+@media only screen and (min-width: 1441px) {  
     
-    p.lead {
-        font-size: 1.8em
-    }
-    h1.fatFont {
-        font-size: 7em;
-    }
-    
-    h2.fatFont, h2.head2 {
-        font-size: 5em;
-    }
-    
-    .carousel-caption h1 {
-        font-size: 7em;
-    }
-    
-    .carousel-caption h2 {
-        font-size: 3em;
-    }
-    .jumbotron blockquote {
-        font-size: 2.5em;
-    }
-    
-    .col-md-4 h5 {
-        font-size: 3em;
-    }
     
     .carousel-caption button {
-        font-size: 2.5em;
         margin-top: 1em;
     
     }
-    
-    .nav-link {
-    font-size: 2em;
-    }
-    
 }
 
 /*site not intended to show this small*/
